Fix mobile gap with layout

--- a/assets/css/setup/mq-mail.css
+++ b/assets/css/setup/mq-mail.css
@@ -4,6 +4,7 @@
   :root {
     font-size: 14px;
   }
+
   /* SideBar */
   .side-bar {
     position: absolute;
@@ -63,10 +64,9 @@
 
   /* Main Layout */
   .mail-page-layout {
-    display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: 60px 1fr;
+    grid-template-columns: 50px 1fr;
     grid-template-rows: 100px 1fr;
   }
 
@@ -80,8 +80,8 @@
     min-height: 30px;
 
     img {
-      width: 30px;
-      height: 30px;
+      width: 25px;
+      height: 25px;
     }
   }
 
@@ -89,8 +89,6 @@
     display: flex;
     align-items: center;
     gap: 0;
-
-    margin-inline-start: 20px;
   }
 
   /* Filter Modal */
